tests/solidity/bad/notests.sol
contract Abstract {
  function f() pure public returns (int) {return 0;}
}
